pvc-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-with-pv
spec:
  replicas: 2
  selector:
    matchLabels:
      app: busybox-with-pv
  template:
    metadata:
      labels:
        app: busybox-with-pv
    spec:
      containers:
        - image: busybox
          command:
            - sh
            - -c
            - "while true; do date > /mnt/index-`hostname`.html; hostname >> /mnt/index-`hostname`.html; sleep $(($RANDOM % 5 + 5)); done"
          imagePullPolicy: IfNotPresent
          name: busybox
          volumeMounts:
            - name: nfs
              mountPath: "/mnt"
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-pvc
