dashboard-config_k3d.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  hosts:
  - "dashboard.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  tls:
  - match:
    - port: 443
      sniHosts:
      - "dashboard.${EXTERNAL_DOMAIN}"
    route:
    - destination:
        host: kubernetes-dashboard-kong-proxy
        port:
          number: 443
