istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-system
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.${EXTERNAL_DOMAIN}"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "*.${EXTERNAL_DOMAIN}"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "istio.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system
  http:
  - name: kiali
    match:
    - port: 80
    - uri:
        prefix: /kiali/
    route:
    - destination:
        host: kiali
        port:
          number: 20001
