telemetry-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mimir
spec:
  hosts:
  - "mimir.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  http:
  - name: mimir
    match:
    - port: 80
    route:
    - destination:
        port:
          number: 80
        host: mimir-nginx
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
  - "grafana.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  http:
  - name: grafana
    match:
    - port: 80
    route:
    - destination:
        port:
          number: 80
        host: grafana
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tempo
spec:
  hosts:
  - "tempo.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  http:
  - name: tempo
    match:
    - port: 80
    route:
    - destination:
        port:
          number: 3100
        host: tempo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tempo-collector
spec:
  hosts:
  - "tempo-collector.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  http:
  - name: tempo-collector
    match:
    - port: 80
    route:
    - destination:
        port:
          number: 4318
        host: tempo
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alloy
spec:
  hosts:
  - "alloy.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  http:
  - name: alloy
    match:
    - port: 80
    route:
    - destination:
        port:
          number: 12345
        host: alloy
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki
spec:
  hosts:
  - "loki.${EXTERNAL_DOMAIN}"
  gateways:
  - istio-system/istio-system
  http:
  - name: loki
    match:
    - port: 80
    route:
    - destination:
        port:
          number: 80
        host: loki-gateway
